# disnake-ext-components

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  docs-req.txt  example.py  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml
disnake/ext/components/: __init__.py  listener.py
disnake_ext_components/: __init__.py  abc.py  converter.py  deprecation.py  exceptions.py  listener.py  params.py  patterns.py  types_.py  utils.py
docs/source/: changelog.rst  conf.py  index.rst  installing.rst  quickstart.rst  util.py
docs/source/_static/css/: attributetable.css  custom.css
docs/source/_static/js/: custom.js
docs/source/api/: components.rst
docs/source/api_ref/: fields.rst  index.rst  interaction.rst
docs/source/api_ref/api/: component.rst  index.rst  parser.rst
docs/source/api_ref/impl/: index.rst
docs/source/api_ref/impl/parser/: base.rst  index.rst
docs/source/dev/: base_classes.rst  internal_api.rst
docs/source/examples/: attrs.rst  button.rst  buttons.rst  index.rst  manager.rst  select.rst
docs/source/extensions/: attributetable.py
docs/source/quickstart/: basics.rst  index.rst
examples/: README.md  attrs.py  button.py  component_matching.py  detail.py  manager.py  modal.py  paginator.py  select.py  test_paginator.py
scripts/: example.py  slotscheck.py  symlink.py
src/disnake/ext/components/: __init__.py  fields.py  interaction.py
src/disnake/ext/components/api/: __init__.py  component.py  converter.py  custom_id.py  factory.py  parser.py
src/disnake/ext/components/impl/: __init__.py  converter.py  custom_id.py  factory.py  manager.py
src/disnake/ext/components/impl/component/: __init__.py  base.py  button.py  select.py
src/disnake/ext/components/impl/parser/: __init__.py  base.py  channel.py  emoji.py  enum.py  guild.py  helpers.py  invite.py  message.py  permissions.py  role.py  snowflake.py  stdlib.py  user.py
src/disnake/ext/components/internal/: __init__.py  aio.py  reference.py  regex.py
tests/: conftest.py  test_checks.py  test_component_build.py  test_invoke.py  test_listeners.py  test_params.py  test_types.py  test_utils.py
